fix restructure issues, get tests passing

--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -1,5 +1,5 @@
 <h1>Artist</h1>
-<%= button_to 'Start dynamic playlist', [:start_playlist, @artist] %>
+<%= button_to 'Start dynamic playlist', start_playlist_artist_path(@artist) %>
 <h2>Metadata</h2>
 <h3>what.cd</h3>
 <table>
