--- a/app/views/groups/edit.html.erb
+++ b/app/views/groups/edit.html.erb
@@ -27,7 +27,7 @@
     </tr>
   </table>
   <h3>Artists</h3>
-  <%= render partial: 'dabster/shared/group_artists' %>
+  <%= render partial: 'shared/group_artists' %>
   <p>
   <%= f.submit 'Update' %>&nbsp;<%= link_to 'Cancel', @group.library_album %>
   </p>
