--- a/app/views/playback/show.html.erb
+++ b/app/views/playback/show.html.erb
@@ -1,4 +1,4 @@
-<%= javascript 'dabster/playback' %>
+<%= javascript 'playback' %>
 <% if @status == :empty || @playlist.nil? %>
   <p>Current playlist not present<p>
 <% elsif @status == :playing %>
