--- a/app/views/artists/_library_item.html.erb
+++ b/app/views/artists/_library_item.html.erb
@@ -1,4 +1,4 @@
 <tr>
-  <td><%= link_to library_item.title, library_item %></td>
-  <td><%= link_to library_item.album, library_item.library_album %></td>
+  <td><%= link_to library_item.title, library_item_path(library_item) %></td>
+  <td><%= link_to library_item.album, library_album_path(library_item.library_album) %></td>
 </tr>
